sauvegarde avant retour ordi
